object pick working on

--- a/sample/index.html
+++ b/sample/index.html
@@ -2,14 +2,14 @@
 <head>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css">
 
-    <script src="/bower_components/dxf-parser/dist/dxf-parser.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/three.js/three.min.js"></script>
+    <script src="bower_components/dxf-parser/dist/dxf-parser.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/three.js/three.min.js"></script>
     
     <!-- Three.js extras -->
-    <script src="/libs/js/OrbitControls.js"></script>
+    <script src="libs/js/OrbitControls.js"></script>
     
-    <script src="/bower_components/three-dxf/dist/three-dxf.js"></script>
+    <script src="../three-dxf.js"></script>
 </head>
 <body>
 <style>
